# BSU

./: CMakeLists.txt
AssemblyTranslate/: CMakeLists.txt  assembly.cpp  assembly.h  command.h  command_test.cpp  program_test.cpp
Laba2/: CMakeLists.txt  source.cpp
Laba2_QT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  string_render.h  string_reneder.cpp
Laba3/: CMakeLists.txt  source.cpp  task1.h  task2.h  task3.h  task4.h  task5.h  task6.h  test.cpp
Laba3_QT/: CMakeLists.txt  main_data.cpp  main_data.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Laba4/: CMakeLists.txt  source.cpp  task1.h  task2.h  task3_crossing.h  task3_sub.h  test.cpp
Laba5/: CMakeLists.txt  test.cpp
Laba7/: CMakeLists.txt  hello.s  main.cpp  remainder.asm  remainder.s
free_room/: CMakeLists.txt  main.cpp  remainder.asm  tree.h
geobebra_example/: CMakeLists.txt  paint_widget.cpp
geogebra/: CMakeLists.txt  graphwidjet.cpp  graphwidjet.h  mainwindow.cpp  mainwindow.h
kr1/: CMakeLists.txt  header.h  source.cpp  test.cpp
painter-demo/: CMakeLists.txt  main_window.cpp  paint_widget.cpp
queue/: CMakeLists.txt  tests.cpp
rays/: CMakeLists.txt  controller.cpp  controller.h  graphics_polygon.h  light_area.cpp  light_area.h  main.cpp  main_window.cpp  main_window.h  my_scene.cpp  my_scene.h  my_view.cpp  my_view.h  old_code  paint_widget.cpp  paint_widget.h  polygon.cpp  polygon.h  ray.cpp  ray.h  tests.cpp
read/: CMakeLists.txt
string/: CMakeLists.txt  constructors_desctructor_tests.cpp  operator_tests.cpp  string.cpp  string.h  string_tests.cpp  string_view.cpp  string_view.h  string_view_tests.cpp
tester_QT/: CMakeLists.txt  main.cpp
